[project]
name = "test-python-git-ref-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vincent Hiribarren", email = "vhiribarren@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pendulum>=3.0.0",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.8.1",
]
